# googleQt

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/authorize/: CMakeLists.txt  main.cpp
examples/gcontactbash/: CMakeLists.txt  GcontactCommands.cpp
examples/gdrivebash/: CMakeLists.txt
examples/gmailbash/: CMakeLists.txt
examples/gtaskbash/: CMakeLists.txt  GtaskCommands.cpp
src/: Endpoint.cpp  Endpoint.h  GoogleClient.cpp  GoogleClient.h
src/gcontact/: GcontactCache.cpp  GcontactCacheUtil.cpp
src/gdrive/: GdriveRequestArg.cpp  GdriveRequestArg.h  GdriveRoutes.cpp  GdriveRoutes.h
src/gdrive/permissions/: PermissionsResourcePermission.cpp  PermissionsResourcePermission.h  PermissionsRoutes.cpp  PermissionsRoutes.h
src/gmail/: GmailCache.cpp  GmailRequestArg.cpp
src/google/endpoint/: ApiAuthInfo.cpp  ApiAuthInfo.h  ApiAutotest.cpp  ApiBase.cpp  ApiBase.h  ApiClient.cpp  ApiClient.h  ApiEndpoint.cpp  ApiEndpoint.h  ApiException.cpp  ApiException.h  GoogleHost.cpp  GoogleWebAuth.cpp  GoogleWebAuth.h
