project(googleQt LANGUAGES CXX)

if(NOT Qt6Core_FOUND)
    find_package(Qt6 REQUIRED COMPONENTS Core Network Xml Sql Core5Compat Gui)
endif()

set(GOOGLEQT_SOURCES
    src/Endpoint.cpp
    src/Endpoint.h
    src/GoogleClient.cpp
    src/GoogleClient.h
    src/GoogleRouteBase.h
    src/gcontact/AUTOTEST/GcontactAutotest.cpp
    src/gcontact/AUTOTEST/GcontactAutotest.h
    src/gcontact/contacts/ContactsRoutes.cpp
    src/gcontact/contacts/ContactsRoutes.h
    src/gcontact/contact_group/ContactGroupRoutes.cpp
    src/gcontact/contact_group/ContactGroupRoutes.h
    src/gcontact/GcontactCache.cpp
    src/gcontact/GcontactCache.h
    src/gcontact/GcontactCacheUtil.cpp
    src/gcontact/GcontactCacheUtil.h
    src/gcontact/GcontactParts.cpp
    src/gcontact/GcontactParts.h
    src/gcontact/GcontactRequestArg.cpp
    src/gcontact/GcontactRequestArg.h
    src/gcontact/GcontactRoutes.cpp
    src/gcontact/GcontactRoutes.h
    src/gdrive/about/AboutAboutResource.cpp
    src/gdrive/about/AboutAboutResource.h
    src/gdrive/about/AboutRoutes.cpp
    src/gdrive/about/AboutRoutes.h
    src/gdrive/about/AboutStorageQuota.cpp
    src/gdrive/about/AboutStorageQuota.h
    src/gdrive/about/AboutUserInfo.cpp
    src/gdrive/about/AboutUserInfo.h
    src/gdrive/AUTOTEST/GdriveAutotest.cpp
    src/gdrive/AUTOTEST/GdriveAutotest.h
    src/gdrive/comments/CommentsComment.cpp
    src/gdrive/comments/CommentsComment.h
    src/gdrive/comments/CommentsCommentListResult.cpp
    src/gdrive/comments/CommentsCommentListResult.h
    src/gdrive/comments/CommentsQuotedFileContent.cpp
    src/gdrive/comments/CommentsQuotedFileContent.h
    src/gdrive/comments/CommentsReply.cpp
    src/gdrive/comments/CommentsReply.h
    src/gdrive/comments/CommentsRoutes.cpp
    src/gdrive/comments/CommentsRoutes.h
    src/gdrive/comments/CommentsUser.cpp
    src/gdrive/comments/CommentsUser.h
    src/gdrive/files/FilesContentHints.cpp
    src/gdrive/files/FilesContentHints.h
    src/gdrive/files/FilesCreateFileDetails.cpp
    src/gdrive/files/FilesCreateFileDetails.h
    src/gdrive/files/FilesFileResource.cpp
    src/gdrive/files/FilesFileResource.h
    src/gdrive/files/FilesFileResourcesCollection.cpp
    src/gdrive/files/FilesFileResourcesCollection.h
    src/gdrive/files/FilesGeneratedIdsCollection.cpp
    src/gdrive/files/FilesGeneratedIdsCollection.h
    src/gdrive/files/FilesImageMediaMetadata.cpp
    src/gdrive/files/FilesImageMediaMetadata.h
    src/gdrive/files/FilesLocationData.cpp
    src/gdrive/files/FilesLocationData.h
    src/gdrive/files/FilesRoutes.cpp
    src/gdrive/files/FilesRoutes.h
    src/gdrive/files/FilesThumbnailInfo.cpp
    src/gdrive/files/FilesThumbnailInfo.h
    src/gdrive/files/FilesUpdateFileDetails.cpp
    src/gdrive/files/FilesUpdateFileDetails.h
    src/gdrive/files/FilesVideoMediaMetadata.cpp
    src/gdrive/files/FilesVideoMediaMetadata.h
    src/gdrive/GdriveRequestArg.cpp
    src/gdrive/GdriveRequestArg.h
    src/gdrive/GdriveRoutes.cpp
    src/gdrive/GdriveRoutes.h
    src/gdrive/permissions/PermissionsPermissionResourcesCollection.cpp
    src/gdrive/permissions/PermissionsPermissionResourcesCollection.h
    src/gdrive/permissions/PermissionsResourcePermission.cpp
    src/gdrive/permissions/PermissionsResourcePermission.h
    src/gdrive/permissions/PermissionsRoutes.cpp
    src/gdrive/permissions/PermissionsRoutes.h
    src/gdrive/revisions/RevisionsRevisionResource.cpp
    src/gdrive/revisions/RevisionsRevisionResource.h
    src/gdrive/revisions/RevisionsRevisionResourceCollection.cpp
    src/gdrive/revisions/RevisionsRevisionResourceCollection.h
    src/gdrive/revisions/RevisionsRevisionUser.cpp
    src/gdrive/revisions/RevisionsRevisionUser.h
    src/gdrive/revisions/RevisionsRoutes.cpp
    src/gdrive/revisions/RevisionsRoutes.h
    src/gdrive/revisions/RevisionsUpdateRevisionDetails.cpp
    src/gdrive/revisions/RevisionsUpdateRevisionDetails.h
    src/gmail/attachments/AttachmentsMessageAttachment.cpp
    src/gmail/attachments/AttachmentsMessageAttachment.h
    src/gmail/attachments/AttachmentsRoutes.cpp
    src/gmail/attachments/AttachmentsRoutes.h
    src/gmail/AUTOTEST/GmailAutotest.cpp
    src/gmail/AUTOTEST/GmailAutotest.h
    src/gmail/drafts/DraftsDraftListRes.cpp
    src/gmail/drafts/DraftsDraftListRes.h
    src/gmail/drafts/DraftsDraftResource.cpp
    src/gmail/drafts/DraftsDraftResource.h
    src/gmail/drafts/DraftsRoutes.cpp
    src/gmail/drafts/DraftsRoutes.h
    src/gmail/errors/ErrorsErrorInfo.cpp
    src/gmail/errors/ErrorsErrorInfo.h
    src/gmail/errors/ErrorsErrorPart.cpp
    src/gmail/errors/ErrorsErrorPart.h
    src/gmail/GmailCache.cpp
    src/gmail/GmailCache.h
    src/gmail/GmailCacheRoutes.cpp
    src/gmail/GmailCacheRoutes.h
    src/gmail/GmailRequestArg.cpp
    src/gmail/GmailRequestArg.h
    src/gmail/GmailRoutes.cpp
    src/gmail/GmailRoutes.h
    src/gmail/history/HistoryHistoryRecord.cpp
    src/gmail/history/HistoryHistoryRecord.h
    src/gmail/history/HistoryHistoryRecordList.cpp
    src/gmail/history/HistoryHistoryRecordList.h
    src/gmail/history/HistoryLabelHistoryRecord.cpp
    src/gmail/history/HistoryLabelHistoryRecord.h
    src/gmail/history/HistoryRoutes.cpp
    src/gmail/history/HistoryRoutes.h
    src/gmail/labels/LabelsLabelResource.cpp
    src/gmail/labels/LabelsLabelResource.h
    src/gmail/labels/LabelsLabelsResultList.cpp
    src/gmail/labels/LabelsLabelsResultList.h
    src/gmail/labels/LabelsRoutes.cpp
    src/gmail/labels/LabelsRoutes.h
    src/gmail/messages/MessagesBatchDeleteBodyArg.cpp
    src/gmail/messages/MessagesBatchDeleteBodyArg.h
    src/gmail/messages/MessagesMessageListRes.cpp
    src/gmail/messages/MessagesMessageListRes.h
    src/gmail/messages/MessagesMessageMimeBody.cpp
    src/gmail/messages/MessagesMessageMimeBody.h
    src/gmail/messages/MessagesMessagePart.cpp
    src/gmail/messages/MessagesMessagePart.h
    src/gmail/messages/MessagesMessagePartBody.cpp
    src/gmail/messages/MessagesMessagePartBody.h
    src/gmail/messages/MessagesMessagePayload.cpp
    src/gmail/messages/MessagesMessagePayload.h
    src/gmail/messages/MessagesMessagePayloadHeader.cpp
    src/gmail/messages/MessagesMessagePayloadHeader.h
    src/gmail/messages/MessagesMessageResource.cpp
    src/gmail/messages/MessagesMessageResource.h
    src/gmail/messages/MessagesRoutes.cpp
    src/gmail/messages/MessagesRoutes.h
    src/gmail/threads/ThreadsRoutes.cpp
    src/gmail/threads/ThreadsRoutes.h
    src/gmail/threads/ThreadsThreadListRes.cpp
    src/gmail/threads/ThreadsThreadListRes.h
    src/gmail/threads/ThreadsThreadResource.cpp
    src/gmail/threads/ThreadsThreadResource.h
    src/gmail/users/UsersGetProfileResponse.cpp
    src/gmail/users/UsersGetProfileResponse.h
    src/gmail/users/UsersRoutes.cpp
    src/gmail/users/UsersRoutes.h
    src/google/AUTOTEST/GoogleAutotest.cpp
    src/google/AUTOTEST/GoogleAutotest.h
    src/google/demo/ApiListener.cpp
    src/google/demo/ApiListener.h
    src/google/demo/ApiTerminal.cpp
    src/google/demo/ApiTerminal.h
    src/google/endpoint/ApiAppInfo.cpp
    src/google/endpoint/ApiAppInfo.h
    src/google/endpoint/ApiAuthInfo.cpp
    src/google/endpoint/ApiAuthInfo.h
    src/google/endpoint/ApiAutotest.cpp
    src/google/endpoint/ApiAutotest.h
    src/google/endpoint/ApiBase.cpp
    src/google/endpoint/ApiBase.h
    src/google/endpoint/ApiClient.cpp
    src/google/endpoint/ApiClient.h
    src/google/endpoint/ApiEndpoint.cpp
    src/google/endpoint/ApiEndpoint.h
    src/google/endpoint/ApiException.cpp
    src/google/endpoint/ApiException.h
    src/google/endpoint/ApiUtil.h
    src/google/endpoint/BatchRunner.h
    src/google/endpoint/Cache.cpp
    src/google/endpoint/Cache.h
    src/google/endpoint/GoogleHost.cpp
    src/google/endpoint/GoogleHost.h
    src/google/endpoint/GoogleTask.cpp
    src/google/endpoint/GoogleTask.h
    src/google/endpoint/GoogleWebAuth.cpp
    src/google/endpoint/GoogleWebAuth.h
    src/gtask/AUTOTEST/GtaskAutotest.cpp
    src/gtask/AUTOTEST/GtaskAutotest.h
    src/gtask/GtaskCache.cpp
    src/gtask/GtaskCache.h
    src/gtask/GtaskRequestArg.cpp
    src/gtask/GtaskRequestArg.h
    src/gtask/GtaskRoutes.cpp
    src/gtask/GtaskRoutes.h
    src/gtask/tasklists/TasklistsRoutes.cpp
    src/gtask/tasklists/TasklistsRoutes.h
    src/gtask/tasklists/TasklistsTaskListCollectionRes.cpp
    src/gtask/tasklists/TasklistsTaskListCollectionRes.h
    src/gtask/tasklists/TasklistsTaskListResource.cpp
    src/gtask/tasklists/TasklistsTaskListResource.h
    src/gtask/tasks/TasksRoutes.cpp
    src/gtask/tasks/TasksRoutes.h
    src/gtask/tasks/TasksTaskCollectionRes.cpp
    src/gtask/tasks/TasksTaskCollectionRes.h
    src/gtask/tasks/TasksTaskLink.cpp
    src/gtask/tasks/TasksTaskLink.h
    src/gtask/tasks/TasksTaskResource.cpp
    src/gtask/tasks/TasksTaskResource.h
)

add_library(googleQt STATIC
    ${GOOGLEQT_SOURCES}
)

include_directories(src)

target_include_directories(googleQt PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
target_link_libraries(googleQt
    PUBLIC Qt6::Core Qt6::Network Qt6::Xml Qt6::Sql Qt6::Core5Compat Qt6::Gui
)

add_subdirectory(examples)
